--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Starter Template for Bootstrap</title>
+    <!-- d3.js scripts -->
+    <script type = "text/javascript" src="d3/build/d3.min.js"></script>
     <!-- Bootstrap core CSS -->
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -42,7 +44,12 @@
         <h2>Icons</h2>
         <p><i class="fa fa-rocket"></i></p>
       </div>
+      <div id="chart">
+
+      </div>
+      <script type="text/javascript" src="js/script.js"></script>
 
     </div><!-- /.container -->
+
   </body>
 </html>
