--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <body>
 
     <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
+      <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Vantiv</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -30,19 +30,23 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Back to iQ &nbsp; <span class="fa fa-reply"></span> </a></li>
+            <li><a href="#">Logout &nbsp; <span class="fa fa-sign-out"></span></a></li>
+          </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    <div class="container">
 
+    </nav>
+    <div class="container">
       <div class="starter-template">
         <h1>Bootstrap starter template</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
         <h2>Icons</h2>
         <p><i class="fa fa-rocket"></i></p>
       </div>
-
     </div><!-- /.container -->
   </body>
 </html>
