--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,12 @@
   <link href="css/style.css" rel="stylesheet">
 
 
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-  <![endif]-->
+  <!--&lt;!&ndash; HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries &ndash;&gt;-->
+  <!--&lt;!&ndash; WARNING: Respond.js doesn't work if you view the page via file:// &ndash;&gt;-->
+  <!--&lt;!&ndash;[if lt IE 9]>-->
+  <!--<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>-->
+  <!--<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>-->
+  <!--<![endif]&ndash;&gt;-->
 
 </head>
 
@@ -35,30 +35,28 @@
   <div id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a href="#">
           Start Bootstrap
-        </a>
       </li>
       <li>
-        <a href="#">Dashboard</a>
+        <a href="#"><span class="fa fa-tachometer menu-item"></span>Dashboard</a>
       </li>
       <li>
-        <a href="#">Shortcuts</a>
+        <a href="#"><span class="fa fa-file-text-o menu-item"></span>Custom Reporting</a>
       </li>
       <li>
-        <a href="#">Overview</a>
+        <a href="#"><span class="fa fa-users menu-item"></span>Shopper Insights</a>
       </li>
       <li>
-        <a href="#">Events</a>
+        <a href="#"><span class="fa fa-cog menu-item"></span>Settings</a>
       </li>
       <li>
-        <a href="#">About</a>
+        <a href="#"><span class="fa fa-suitcase menu-item"></span>Support</a>
       </li>
       <li>
-        <a href="#">Services</a>
+        <a href="#"><span class="fa fa-reply menu-item"></span>Back to iQ</a>
       </li>
       <li>
-        <a href="#">Contact</a>
+        <a href="#"><span class="fa fa-sign-out menu-item"></span>Logout</a>
       </li>
     </ul>
   </div>
@@ -78,28 +76,83 @@
           <a class="navbar-brand" href="#">Vantiv</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Back to iQ &nbsp; <span class="fa fa-reply"></span> </a></li>
-            <li><a href="#">Logout &nbsp; <span class="fa fa-sign-out"></span></a></li>
+            <li><a href="#menu-toggle" class="" id="menu-toggle">Toggle Menu</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-    <div class="container-fluid">
+    <div class="container-fluid content-container">
       <div class="row">
-        <div class="col-lg-12">
-          <h1>Simple Sidebar</h1>
+        <div class="col-lg-8 col-md-6 col-sm-12">
+          <div class="column">
+          <h1>Daily Sales Over Time</h1>
+          <p><a href="#">Create Report</a></p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="column">
+          <h1>col-lg-4 col-md-6 col-sm-12</h1>
           <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
           <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-          <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+          </div>
+          </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <div class="column">
+          <h1>col-lg-3 col-md-6 col-sm-12</h1>
+          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
+          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <div class="column">
+          <h1>col-lg-3 col-md-6 col-sm-12</h1>
+          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
+          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <div class="column">
+          <h1>col-lg-3 col-md-6 col-sm-12</h1>
+          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
+          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+          <div class="column">
+          <h1>col-lg-3 col-md-6 col-sm-12</h1>
+          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
+          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+            </div>
+        </div>
+    </div>
+      <div class="row">
+        <div class="col-lg-6 col-md-12 col-sm-12">
+          <div class="column">
+          <h1>col-lg-6 col-md-12 col-sm-12</h1>
+          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
+          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-12 col-sm-12">
+          <div class="column">
+          <h1>col-lg-6 col-md-12 col-sm-12</h1>
+          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
+          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+          </div>
         </div>
       </div>
-    </div>
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+          <div class="column">
+          <h1>col-lg-12 col-md-12 col-sm-12</h1>
+          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
+          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+          </div>
+        </div>
+      </div>
   </div>
   <!-- /#page-content-wrapper -->
 
@@ -107,7 +160,7 @@
 <!-- /#wrapper -->
 
 <!-- jQuery -->
-<script src="js/jquery.js"></script>
+<script src="js/jquery.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
@@ -120,6 +173,7 @@
   });
 </script>
 
+</div>
 </body>
 
 </html>
