create a js file for the toggle menu function

--- a/public/index.html
+++ b/public/index.html
@@ -161,17 +161,10 @@
 
 <!-- jQuery -->
 <script src="js/jquery.min.js"></script>
-
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
-
-<!-- Menu Toggle Script -->
-<script>
-  $("#menu-toggle").click(function(e) {
-    e.preventDefault();
-    $("#wrapper").toggleClass("toggled");
-  });
-</script>
+<!-- Menu toggle JavaScript -->
+<script src="js/toggle.js"></script>
 
 </div>
 </body>
