--- a/public/index.html
+++ b/public/index.html
@@ -84,73 +84,51 @@
     </nav>
     <div class="container-fluid content-container">
       <div class="row">
-        <div class="col-lg-8 col-md-6 col-sm-12">
-          <div class="column">
-          <h1>Daily Sales Over Time</h1>
-          <p><a href="#">Create Report</a></p>
-          </div>
+
+        <div class="col-lg-8 col-md-6 col-sm-12 ">
+          <div class="panel">
+          <h1>Column 1 (8-6-12)</h1>
+            <img src="http://placehold.it/800x200" class="img-responsive">
+        </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="column">
-          <h1>col-lg-4 col-md-6 col-sm-12</h1>
-          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-          </div>
-          </div>
+          <div class="panel">
+          <h1>Column 2 (4-6-12)</h1>
+          <img src="http://placehold.it/400x200" class="img-responsive">
+          </div></div>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 col-sm-12">
-          <div class="column">
-          <h1>col-lg-3 col-md-6 col-sm-12</h1>
-          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-          </div>
+          <h1>Column 1 3-6-12</h1>
+          <img src="http://placehold.it/900x420" class="img-responsive">
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12">
-          <div class="column">
-          <h1>col-lg-3 col-md-6 col-sm-12</h1>
-          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-            </div>
+          <h1>Column 2 3-6-12</h1>
+          <img src="http://placehold.it/900x420" class="img-responsive">
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12">
-          <div class="column">
-          <h1>col-lg-3 col-md-6 col-sm-12</h1>
-          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-            </div>
+          <h1>Column 3 3-6-12</h1>
+          <img src="http://placehold.it/900x420" class="img-responsive">
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12">
-          <div class="column">
-          <h1>col-lg-3 col-md-6 col-sm-12</h1>
-          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-            </div>
+          <h1>Column 4 3-6-12</h1>
+          <img src="http://placehold.it/900x420" class="img-responsive">
         </div>
     </div>
       <div class="row">
         <div class="col-lg-6 col-md-12 col-sm-12">
-          <div class="column">
-          <h1>col-lg-6 col-md-12 col-sm-12</h1>
-          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-          </div>
+          <h1>Column 1 6-12-12</h1>
+          <img src="http://placehold.it/1200x420" class="img-responsive">
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12">
-          <div class="column">
-          <h1>col-lg-6 col-md-12 col-sm-12</h1>
-          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-          </div>
+          <h1>Column 2 6-12-12</h1>
+          <img src="http://placehold.it/1200x420" class="img-responsive">
         </div>
       </div>
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
-          <div class="column">
-          <h1>col-lg-12 col-md-12 col-sm-12</h1>
-          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-          </div>
+          <h1>Column 1 12-12-12</h1>
+          <img src="http://placehold.it/1800x220" class="img-responsive">
         </div>
       </div>
   </div>
