changed sidebar class to extend font-awesome list-group class, need to add sidebar title still

--- a/public/index.html
+++ b/public/index.html
@@ -33,32 +33,15 @@
 
   <!-- Sidebar -->
   <div id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-      <li class="sidebar-brand">
-          Start Bootstrap
-      </li>
-      <li>
-        <a href="#"><span class="fa fa-tachometer menu-item"></span>Dashboard</a>
-      </li>
-      <li>
-        <a href="#"><span class="fa fa-file-text-o menu-item"></span>Custom Reporting</a>
-      </li>
-      <li>
-        <a href="#"><span class="fa fa-users menu-item"></span>Shopper Insights</a>
-      </li>
-      <li>
-        <a href="#"><span class="fa fa-cog menu-item"></span>Settings</a>
-      </li>
-      <li>
-        <a href="#"><span class="fa fa-suitcase menu-item"></span>Support</a>
-      </li>
-      <li>
-        <a href="#"><span class="fa fa-reply menu-item"></span>Back to iQ</a>
-      </li>
-      <li>
-        <a href="#"><span class="fa fa-sign-out menu-item"></span>Logout</a>
-      </li>
-    </ul>
+    <div class="list-group">
+        <a class="list-group-item" href="#"><i class="fa fa-tachometer fa-fw"></i>&nbsp; Dashboard</a>
+        <a class="list-group-item" href="#"><i class="fa fa-file-text-o fa-fw"></i>&nbsp; Custom Reporting</a>
+        <a class="list-group-item" href="#"><i class="fa fa-users fa-fw"></i>&nbsp; Shopper Insights</a>
+        <a class="list-group-item" href="#"><i class="fa fa-cog fa-fw"></i>&nbsp; Settings</a>
+        <a class="list-group-item" href="#"><i class="fa fa-suitcase fa-fw"></i>&nbsp; Support</a>
+        <a class="list-group-item" href="#"><i class="fa fa-reply fa-fw"></i>&nbsp; Back to iQ</a>
+        <a class="list-group-item" href="#"><i class="fa fa-sign-out fa-fw"></i>&nbsp; Logout</a>
+      </div>
   </div>
   <!-- /#sidebar-wrapper -->
 
