--- a/public/index.html
+++ b/public/index.html
@@ -33,14 +33,15 @@
 
   <!-- Sidebar -->
   <div id="sidebar-wrapper">
+      <h3 class="page-header">Unistar Credit Union<br><br><small>123456-789011-1213145 FI#</small></h3>
     <div class="list-group">
-        <a class="list-group-item" href="#"><i class="fa fa-tachometer fa-fw"></i>&nbsp; Dashboard</a>
-        <a class="list-group-item" href="#"><i class="fa fa-file-text-o fa-fw"></i>&nbsp; Custom Reporting</a>
-        <a class="list-group-item" href="#"><i class="fa fa-users fa-fw"></i>&nbsp; Shopper Insights</a>
-        <a class="list-group-item" href="#"><i class="fa fa-cog fa-fw"></i>&nbsp; Settings</a>
-        <a class="list-group-item" href="#"><i class="fa fa-suitcase fa-fw"></i>&nbsp; Support</a>
-        <a class="list-group-item" href="#"><i class="fa fa-reply fa-fw"></i>&nbsp; Back to iQ</a>
-        <a class="list-group-item" href="#"><i class="fa fa-sign-out fa-fw"></i>&nbsp; Logout</a>
+        <a class="list-group-item" href="#"><i class="fa fa-tachometer fa-fw"></i>&nbsp;&nbsp; Dashboard</a>
+        <a class="list-group-item" href="#"><i class="fa fa-file-text-o fa-fw"></i>&nbsp;&nbsp; Custom Reporting</a>
+        <a class="list-group-item" href="#"><i class="fa fa-users fa-fw"></i>&nbsp;&nbsp; Shopper Insights</a>
+        <a class="list-group-item" href="#"><i class="fa fa-cog fa-fw"></i>&nbsp;&nbsp; Settings</a>
+        <a class="list-group-item" href="#"><i class="fa fa-suitcase fa-fw"></i>&nbsp;&nbsp; Support</a>
+        <a class="list-group-item" href="#"><i class="fa fa-reply fa-fw"></i>&nbsp;&nbsp; Back to iQ</a>
+        <a class="list-group-item" href="#"><i class="fa fa-sign-out fa-fw"></i>&nbsp;&nbsp; Logout</a>
       </div>
   </div>
   <!-- /#sidebar-wrapper -->
@@ -56,7 +57,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Vantiv</a>
+          <!-- TODO change the logo size to match mock -->
+          <img class="navbar-brand" src="img/vantiv%20logo%20gray.jpg">
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
